--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.8.2",
+    "react-timeago": "^8.3.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13"
   },
