--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-timeago": "^8.3.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
+    "uuid": "^13.0.0",
     "zod": "^4.1.5"
   },
   "devDependencies": {
